--- a/cn.zh-CN/API 参考/读写分离/申请只读地址.md
+++ b/cn.zh-CN/API 参考/读写分离/申请只读地址.md
@@ -21,14 +21,14 @@
 |--|--|----|---|--|
 |Action|String|是|AllocateReadWriteSplittingConnection|系统规定参数，取值：**AllocateReadWriteSplittingConnection**。 |
 |DBInstanceId|String|是|rm-uf6wjk5xxxxxxx|主实例ID。 |
-|ConnectionStringPrefix|String|否|rr-m5exxxxx-rw.mysql.rds.aliyuncs.com|读写分离地址前缀名，不可重复，由小写字母和中划线组成，需以字母开头，长度不超过30个字符。
+|ConnectionStringPrefix|String|否|rr-m5exxxxx-rw.mysql.rds.aliyuncs.com|只读地址前缀名，不可重复，由小写字母和中划线组成，需以字母开头，长度不超过30个字符。
 
  **说明：** 默认以“实例名+rw”字符串组成前缀。 |
-|Port|String|否|1433|读写分离端口，取值为1000~5999，默认为1433。 |
+|Port|String|否|1433|只读地址端口，取值为1000~5999，默认为1433。 |
 |MaxDelayTime|String|否|30|延迟阈值，范围是0~7200，单位：秒，默认为30。
 
  **说明：** 当只读实例延迟超过该阈值时，读取流量不发往该实例。 |
-|NetType|String|否|Intranet|读写分离连接串的网络类型，取值：
+|NetType|String|否|Intranet|只读地址的网络类型，取值：
 
  -   **Internet**：外网
 -   **Intranet**：内网
