--- a/intl.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/全加密云数据库.md
+++ b/intl.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/全加密云数据库.md
@@ -115,7 +115,7 @@ RDS PostgreSQL提供全加密数据库功能，数据在用户侧加密后传入
 
     通过查询获得查询结果后，敏感字段内容将是密文形式，因此需要解密得到明文结果。
 
-    以encdb表中`id`和`name`字段为例：
+    以user\_profile表中`id`和`name`字段为例：
 
     ```
     Int id = sdk.decrypt(result.get("ID"));
