--- a/cn.zh-CN/云数据库 RDS 简介/产品系列/基础版.md
+++ b/cn.zh-CN/云数据库 RDS 简介/产品系列/基础版.md
@@ -4,7 +4,10 @@
 
 基础版也称为单机版，只有单个数据库节点，计算与存储分离，性价比超高。
 
-**说明：** 由于基础版只有一个数据库节点，没有备节点作为热备份，因此当该节点意外宕机或者执行变更配置、版本升级等任务时，会出现较长时间的不可用。如果业务对数据库的可用性要求较高，不建议使用基础版，可选择其他系列（如高可用版），部分基础版实例也支持[升级为高可用版](#section_5sr_8hd_e8j)。
+**说明：**
+
+-   基础版只有一个数据库节点，没有备节点作为热备份，因此当该节点意外宕机或者执行变更配置、版本升级等任务时，会出现较长时间的不可用。如果业务对数据库的可用性要求较高，不建议使用基础版，可选择其他系列（如高可用版），部分基础版实例也支持[升级为高可用版](#section_5sr_8hd_e8j)。
+-   如果使用的是基础版只读实例，由于不提供SLA保障，为了降低风险，建议购买多个只读实例，在服务端配置读请求负载均衡降低风险。
 
 ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6303729951/p54372.png)
 
