--- a/cn.zh-CN/活动与通知/2020双11 阿里云数据库 必买清单.md
+++ b/cn.zh-CN/活动与通知/2020双11 阿里云数据库 必买清单.md
@@ -1,12 +1,12 @@
 # 2020双11 阿里云数据库 必买清单
 
-本文介绍2020双11阿里云数据库的优惠活动内容，您可以根据自身业务情况购买相应产品。
-
-**说明：** 活动即将开始，敬请期待。
+本文介绍2020双11阿里云数据库的优惠活动内容，新老用户均有优惠，您可以根据自身情况购买相应产品。
 
 ## 首次购买可领代金券
 
-活动规则：领券时间从2020年10月28日开始，用券时间为2020年11月01日至11日。仅限首次购买阿里云某一款数据库产品时使用。
+活动规则：领券时间从2020年10月30日开始，用券时间为2020年11月01日至11日。仅限首次购买阿里云某一款数据库产品时使用。
+
+[领券地址](https://www.aliyun.com/1111/database)
 
 |代金券面额（元）|单笔订单用券门槛（元）|
 |--------|-----------|
@@ -14,9 +14,11 @@
 |400|满1000可用|
 |800|满2000可用|
 
-## 购买升级可领代金券
+## 购买或升级可领代金券
 
-活动规则：领券时间从2020年10月28日开始，领完为止。购买、升级指定阿里云数据库产品时可使用该代金券。
+活动规则：领券时间从2020年10月30日开始，领完为止。购买、升级指定阿里云数据库产品时可使用该代金券。
+
+[领券地址](https://www.aliyun.com/1111/database)
 
 |代金券面额（元）|单笔订单用券门槛（元）|
 |--------|-----------|
@@ -31,9 +33,11 @@
 
 活动规则：2020年11月01日至11日，首次购买指定规格的云数据库产品（时长1年）时可享受3折优惠，每个账号仅限1次优惠，数量仅限1个，不与其他代金券或优惠叠加。
 
+[活动地址](https://www.aliyun.com/1111/database)
+
 |产品名称|规格|原价（元）|活动价（元）|折扣|限制账号类型|售卖数量限制|
 |----|--|-----|------|--|------|------|
-|云数据库RDS MySQL|基础版 2核CPU 4GB内存 存储空间≤100GB
+|[云数据库RDS MySQL](https://www.aliyun.com/product/rds/mysql)|基础版 2核CPU 4GB内存 存储空间≤100GB
 
 |3070|921|3折|不限类型|1|
 |基础版4核CPU 8GB内存 存储空间≤100GB
@@ -48,7 +52,7 @@
 |高可用8核CPU 16GB内存 存储空间≤100GB
 
 |22560|6768|3折|企业账号|1|
-|云数据库PolarDB|普惠版（单节点）4核CPU 8GB内存
+|[PolarDB MySQL云原生数据库](https://www.aliyun.com/product/polardb)|普惠版（单节点）4核CPU 8GB内存
 
 |3456|1036.8|3折|不限类型|1|
 |标准版（2节点）4核CPU 16GB内存
@@ -57,7 +61,7 @@
 |计算包（小规格）CU≤800
 
 |30400|9120|3折|不限类型|1|
-|数据库备份DBS|Small|1680|504|3折|不限类型|1|
+|[数据库备份DBS](https://www.aliyun.com/product/dbs)|Small|1680|504|3折|不限类型|1|
 |Medium|2688|806.4|3折|企业账号|1|
 
 **说明：** 超出限制时不参与优惠，表格内价格是按照最高规格计算。
@@ -66,13 +70,15 @@
 
 活动规则：2020年11月09日至11日，首次购买指定规格的云数据库产品时可享受限量（每个产品20个）抢购价，每个账号仅限1次优惠，数量仅限1个，不与其他代金券或优惠叠加。
 
+[活动地址](https://www.aliyun.com/1111/database)
+
 |产品名称|规格|日常价|活动价|售卖数量限制|
 |----|--|---|---|------|
-|专属集群MyBase|32核CPU主机|95126.54|28888|限前20位客户，每人限1台。|
-|云原生数仓AnalyticDB MySQL|弹性模式（新版） 2节点 32核CPU
+|[专属集群MyBase](https://www.aliyun.com/product/apsaradb/cddc)|32核CPU主机|95126.54|28888|限前20位客户，每人限1台。|
+|[云原生数仓AnalyticDB MySQL](https://www.aliyun.com/product/ads)|弹性模式（新版） 2节点 32核CPU
 
 |55692|16888|限前20位客户，每人限1台。|
-|云数据库PolarDB|计算包 1000CU
+|[PolarDB MySQL云原生数据库](https://www.aliyun.com/product/polardb)|计算包 1000CU
 
 |38000|12888|限前20位客户，每人限1台。|
 
@@ -80,9 +86,11 @@
 
 活动规则：2020年11月09日至11日，新购以下指定规格产品，可享指定优惠价，不限数量！
 
+[活动地址](https://www.aliyun.com/1111/database)
+
 |产品名称|规格|原价|活动价|折扣|
 |----|--|--|---|--|
-|云数据库RDS MySQL|基础版2核CPU 4GB内存 存储空间≤200GB
+|[云数据库RDS MySQL](https://www.aliyun.com/product/rds/mysql)|基础版2核CPU 4GB内存 存储空间≤200GB
 
 |4272|2990.4|7折|
 |基础版4核CPU 8GB内存 存储空间≤200GB
@@ -103,7 +111,7 @@
 |三节点企业版全规格
 
 |49680|24840|5折|
-|云数据库RDS SQL Server|标准版2核CPU 4GB内存 内存储空间≤200GB
+|[云数据库RDS SQL Server](https://www.aliyun.com/product/rds/sqlserver)|标准版2核CPU 4GB内存 内存储空间≤200GB
 
 |10260|7182|7折|
 |标准版4核CPU 8GB内存 存储空间≤200GB
@@ -130,7 +138,7 @@
 |企业版8核CPU 16GB内存 存储空间≤200GB
 
 |33600|23520|7折|
-|云数据库RDS PostgreSQL|基础版2核CPU 4GB内存 存储空间≤200GB
+|[云数据库RDS PostgreSQL](https://www.aliyun.com/product/rds/postgresql)|基础版2核CPU 4GB内存 存储空间≤200GB
 
 |4272|2990.4|7折|
 |基础版4核CPU 8GB内存 存储空间≤200GB
@@ -142,7 +150,7 @@
 |高可用8核CPU 16GB内存 存储空间≤200GB
 
 |30048|21033.6|7折|
-|PolarDB MySQL云原生数据库|计算包 800CU内
+|[PolarDB MySQL云原生数据库](https://www.aliyun.com/product/polardb)|计算包 800CU内
 
 |30400|15200|5折|
 |双节点4核CPU 16GB内存
@@ -154,27 +162,27 @@
 |存储包1 TB内
 
 |37800|30240|8折|
-|PolarDB-O云原生数据库|4核CPU 16GB内存|31200|21840|7折|
-|PolarDB-X云原生分布式数据库|16核CPU 64GB内存|55860|39102|7折|
-|云数据库Redis|云盘版 1G内存|1080|540|5折|
+|[PolarDB-O云原生数据库](https://www.aliyun.com/product/polardb)|4核CPU 16GB内存|31200|21840|7折|
+|[PolarDB-X云原生分布式数据库](https://www.aliyun.com/product/drds)|16核CPU 64GB内存|55860|39102|7折|
+|[云数据库Redis（社区版）](https://www.aliyun.com/product/kvstore)|云盘版 1G内存|1080|540|5折|
 |云盘版 2G内存|2160|1080|5折|
 |云盘版 4G内存|4320|2160|5折|
 |云盘版 8G内存|8640|4320|5折|
-|本地盘版 1G内存|1200|960|8折|
-|本地盘版 2G内存|2160|1728|8折|
-|本地盘版 4G内存|4080|3264|8折|
-|本地盘版 8G内存|7920|6336|8折|
-|持久内存型 4GB内存|24096|12048|5折|
+|本地盘版 1G内存主从|1200|960|8折|
+|本地盘版 2G内存主从|2160|1728|8折|
+|本地盘版 4G内存主从|4080|3264|8折|
+|本地盘版 8G内存主从|7920|6336|8折|
+|[云数据库Redis（Tair）](https://www.aliyun.com/product/kvstore)|持久内存型 4GB内存|24096|12048|5折|
 |容量存储型 4核CPU|22440|11220|5折|
-|云数据库MongoDB|2核CPU 4GB内存 存储空间≤200GB|12586|10068.8|8折|
+|[云数据库MongoDB](https://www.aliyun.com/product/mongodb)|2核CPU 4GB内存 存储空间≤200GB|12586|10068.8|8折|
 |4核CPU 8GB内存 存储空间≤400GB|23952|19161.6|8折|
-|云数据库HBase|4核CPU 16GB内存 1TB存储空间|55584|44467.2|8折|
+|[云数据库HBase](https://cn.aliyun.com/product/hbase)|4核CPU 16GB内存 1TB存储空间|55584|44467.2|8折|
 |8核CPU 32GB内存 1TB存储空间|87168|69734.4|8折|
-|云原生数仓AnalyticDB MySQL|C8存储空间≤500GB
+|[云原生数仓AnalyticDB MySQL](https://www.aliyun.com/product/ads)|C8存储空间≤500GB
 
 |62937.6|50350.08|8折|
-|专属集群MyBase|全规格|56803.34|45442.672|8折|
-|数据传输服务DTS|Small|10200|8160|8折|
+|[专属集群MyBase](https://www.aliyun.com/product/apsaradb/cddc)|全规格|56803.34|45442.672|8折|
+|[数据传输服务DTS](https://www.aliyun.com/product/dts)|Small|10200|8160|8折|
 
 **说明：** 超出限制时不参与优惠，表格内价格是按照最高规格计算。
 
@@ -182,33 +190,37 @@
 
 活动规则：2020年11月09日至11日，升级以下产品可享7折优惠，不限数量！
 
+[活动地址](https://www.aliyun.com/1111/database)
+
 |产品|规格|升级折扣|日常折扣|
 |--|--|----|----|
-|云数据库RDS|全规格|任意时长7折|1年8.5折|
-|云数据库Redis|全规格|任意时长7折|1年8.5折|
-|云数据库MongoDB|全规格|任意时长7折|1年8.5折|
-|云数据库PolarDB|全规格|任意时长7折|1年8.5折|
-|云数据库HBase|全规格|任意时长7折|1年8.5折|
-|云原生数仓AnalyticDB|全规格|任意时长7折|1年8.5折|
-|云数据库RDS|按量付费转包年包月|任意时长7折|1年8.5折|
+|[云数据库RDS](https://www.aliyun.com/product/rds/mysql)|全规格|任意时长7折|1年8.5折|
+|[云数据库Redis](https://www.aliyun.com/product/kvstore)|全规格|任意时长7折|1年8.5折|
+|[云数据库MongoDB](https://www.aliyun.com/product/mongodb)|全规格|任意时长7折|1年8.5折|
+|[云数据库PolarDB](https://www.aliyun.com/product/polardb)|全规格|任意时长7折|1年8.5折|
+|[云数据库HBase](https://cn.aliyun.com/product/hbase)|全规格|任意时长7折|1年8.5折|
+|[云原生数仓AnalyticDB](https://www.aliyun.com/product/ads)|全规格|任意时长7折|1年8.5折|
+|[云数据库RDS](https://www.aliyun.com/product/rds/mysql)|按量付费转包年包月|任意时长7折|1年8.5折|
 
 ## 新品9.9元优惠
 
 活动规则：首次购买以下产品可享受9.9元使用3个月的优惠。
 
+[活动地址](https://www.aliyun.com/1111/database)
+
 |产品|规格|金额|客户类型|
 |--|--|--|----|
-|云原生多模数据库Lindorm|宽表引擎4核CPU 8GB内存
+|[云原生多模数据库Lindorm](https://www.aliyun.com/product/apsaradb/lindorm)|宽表引擎4核CPU 8GB内存
 
 |9.9元/3月|首次购买|
-|云数据库Cassandra|2核CPU 4GB内存|9.9元/3月|首次购买|
-|云数据库Hbase|单节点2核CPU 4GB内存
+|[云数据库Cassandra](https://www.aliyun.com/product/cds)|2核CPU 4GB内存|9.9元/3月|首次购买|
+|[云数据库Hbase](https://cn.aliyun.com/product/hbase)|单节点2核CPU 4GB内存
 
 |9.9元/3月|首次购买|
-|图数据库GDB|2核CPU 16GB内存|9.9元/3月|首次购买|
-|数据库备份DBS|micro|9.9元/3月|首次购买|
-|数据管理DMS|稳定变更|9.9元/3月|首次购买|
-|云原生数仓AnalyticDB MySQL|基础版 T16规格
+|[图数据库GDB](https://www.aliyun.com/product/gdb)|2核CPU 16GB内存|9.9元/3月|首次购买|
+|[数据库备份DBS](https://www.aliyun.com/product/dbs)|micro|9.9元/3月|首次购买|
+|[数据管理DMS](https://www.aliyun.com/product/dms)|稳定变更|9.9元/3月|首次购买|
+|[云原生数仓AnalyticDB MySQL](https://www.aliyun.com/product/ads)|基础版 T16规格
 
 |9.9元/3月|首次购买|
 
