--- a/cn.zh-CN/活动与通知/2020双11 阿里云数据库 必买清单.md
+++ b/cn.zh-CN/活动与通知/2020双11 阿里云数据库 必买清单.md
@@ -18,7 +18,7 @@
 
 活动规则：领券时间从2020年10月30日开始，领完为止。购买、升级指定阿里云数据库产品时可使用该代金券。
 
-[领券地址](https://www.aliyun.com/1111/database)
+[领券地址](https://www.aliyun.com/database/telemarketing_other)
 
 |代金券面额（元）|单笔订单用券门槛（元）|
 |--------|-----------|
