--- a/cn.zh-CN/RDS MySQL 数据库/备份/异地备份与即时查询.md
+++ b/cn.zh-CN/RDS MySQL 数据库/备份/异地备份与即时查询.md
@@ -3,8 +3,8 @@
 查询异地的备份数据时，一般需要先把数据恢复到新实例，并进行初始化数据库、拷贝备份、恢复数据等步骤，费时费力。本文将为您介绍如何在不恢复数据的情况下，即时查询异地的备份数据。
 
 -   已创建RDS MySQL实例，创建步骤请参见[创建RDS MySQL实例](/cn.zh-CN/RDS MySQL 数据库/快速入门/创建RDS MySQL实例.md)。
--   已开通数据湖分析（Data Lake Analytics，简称DLA）服务，如何开通服务请参见[开通DLA服务](https://help.aliyun.com/document_detail/111044.html)。
--   已购买数据库备份（Database Backup，简称DBS）服务，如何购买请参见[创建备份计划](https://help.aliyun.com/document_detail/65909.html)。
+-   已开通数据湖分析（Data Lake Analytics，简称DLA）服务，如何开通服务请参见[开通DLA服务]()。
+-   已购买数据库备份（Database Backup，简称DBS）服务，如何购买请参见[创建备份计划](~~65909~~)。
 
     **说明：**
 
@@ -18,7 +18,7 @@
 
 -   DBS可以实现异地备份数据自动化管理，按照备份集热度用OSS低频、归档等类型逐级存放备份集，设置数据失效事件。
 
-    **说明：** 如需了解更多关于OSS存储类型的信息请参见[存储类型介绍](https://help.aliyun.com/document_detail/51374.htm)。
+    **说明：** 如需了解更多关于OSS存储类型的信息请参见[存储类型介绍](/cn.zh-CN/开发指南/存储类型/存储类型介绍.md)。
 
 -   DLA可以实现全量备份数据集即时查询，节省恢复数据资源和时间，简单经济快捷。
 
@@ -71,13 +71,13 @@
     8.  配置备份时间，您可以选择**周期备份**或**单次备份**，单击**下一步**。
     9.  配置生命周期，单击**预检查并启动**。
 
-        **说明：** 配置备份时间和配置生命周期详细信息请参见[配置备份计划](https://help.aliyun.com/document_detail/59609.html)。
+        **说明：** 配置备份时间和配置生命周期详细信息请参见[配置备份计划](~~59609~~)。
 
     10. 待预检查通过后单击**立即启动**。
     11. 等待实例备份完成。
 2.  设置DLA数据库主账号、服务访问点以及OSS访问权限。
 
-    -   设置服务访问点请参见[设置服务访问点](https://help.aliyun.com/document_detail/107696.html)。
+    -   设置服务访问点请参见[创建服务访问点](~~107696~~)。
     -   开通OSS访问权限。
 
         **说明：** 如果已经开通过OSS访问授权，请忽略此步骤。
@@ -102,16 +102,13 @@
 4.  查询DBS全备数据。
 
     1.  登录[DLA控制台](https://datalakeanalytics.console.aliyun.com/overview)。
-    2.  单击左侧导航栏**访问点管理**。
-    3.  在访问点管理页面，单击经典网络中**登录到DMS**。
-    4.  在DMS页面，填写登录信息后单击**登录**。
+    2.  在左侧导航栏选择**Serverless** \> **SQL访问点**。
+    3.  在**SQL访问点**页面，单击**登录到DMS**。
+    4.  填写登录信息后单击**登录**。
 
-        **说明：** DMS会自动填写**地域**、**连接地址**、**DLA数据库账号**，请确认以上信息无误后输入密码。
+        **说明：** DMS会自动填写**数据库类型**、**地域**、**连接串地址**，请确认以上信息无误后输入账号和密码。
 
-        ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8213729951/p58501.png)
-
-    5.  使用DMS登录RDS数据库，操作步骤请参见[通过DMS登录RDS数据库](https://help.aliyun.com/document_detail/64703.html)。
-    6.  在DLA数据库和源RDS数据库中分别执行如下SQL语句核实数据量是否一致：
+    5.  在DLA数据库和源RDS数据库中分别执行如下SQL语句核实数据量是否一致：
 
         ```
         select 'bill' as tableName ,count(id) as countNumber from `bill`
@@ -123,7 +120,7 @@
 
         ![](../images/p58507.png "DLA数据库中数据量")
 
-    7.  在DLA数据库中执行如下SQL语句进行多表关联查询：
+    6.  在DLA数据库中执行如下SQL语句进行多表关联查询：
 
         ```
         select  t.* from dim_code_desc   as t1,  BILL t
