--- a/intl.zh-CN/RDS SQL Server 数据库/数据迁移/从自建数据库迁移至RDS/全量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
+++ b/intl.zh-CN/RDS SQL Server 数据库/数据迁移/从自建数据库迁移至RDS/全量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
@@ -89,6 +89,8 @@
 
 5.  单击右上角**备份数据恢复上云**，选择**OSS手动（备份数据恢复上云）**，单击**下一步**。
 
+    **说明：** **DBS自动（备份数据恢复上云）**迁移上云速度快且稳定，具体操作请参见[SQL Server备份数据恢复上云]()。
+
 6.  在**数据导入向导**页面，单击两次**下一步**，进入数据导入步骤。
 
     **说明：** 如果您是第一次使用OSS备份数据恢复上云功能，需要给RDS官方服务账号授予访问OSS的权限，请单击**授权地址**并同意授权，否则会因权限问题导致**OSS Bucket**下拉列表为空。
