--- a/intl.zh-CN/RDS SQL Server 数据库/数据迁移/从自建数据库迁移至RDS/全量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
+++ b/intl.zh-CN/RDS SQL Server 数据库/数据迁移/从自建数据库迁移至RDS/全量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
@@ -95,9 +95,9 @@
 
     **说明：** 如果您是第一次使用OSS备份数据恢复上云功能，需要给RDS官方服务账号授予访问OSS的权限，请单击**授权地址**并同意授权，否则会因权限问题导致**OSS Bucket**下拉列表为空。
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/68310/cn_zh/1521535258346/2222.png)
-
 7.  设置如下参数。
+
+    ![数据导入](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1884794061/p180273.png)
 
     |配置项|说明|
     |---|--|
