--- a/cn.zh-CN/RDS SQL Server 数据库/数据迁移同步/从自建数据库迁移至RDS/增量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
+++ b/cn.zh-CN/RDS SQL Server 数据库/数据迁移同步/从自建数据库迁移至RDS/增量备份数据上云（SQL Server 2012、2014、2016、2017和2019）.md
@@ -136,9 +136,9 @@ RDS SQL Server增量数据上云适用于以下场景：
 
     **说明：** 如果您是第一次使用OSS备份数据恢复上云功能，需要给RDS官方服务账号授予访问OSS的权限，请单击**授权地址**并同意授权，否则会因权限问题导致**OSS Bucket**下拉列表为空。
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/68310/cn_zh/1521535258346/2222.png)
-
 7.  设置如下参数。
+
+    ![数据导入](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1884794061/p180273.png)
 
     |配置项|说明|
     |---|--|
@@ -150,8 +150,6 @@ RDS SQL Server增量数据上云适用于以下场景：
     -   不打开数据库（还有差异备份或日志文件）：增量上云，适合有完全备份文件加上日志备份（或者差异备份文件）上云的场景，此时CreateMigrateTask 中的`BackupMode = UPDF`并且`IsOnlineDB = False`。 |
     |**一致性检查方式**|    -   异步执行DBCC：在打开数据库的时候系统不做DBCC CheckDB，会在打开数据库任务结束以后，异步执行DBCC CheckDB操作，以此来节约打开数据库操作的时间开销（数据库比较大，DBCC CheckDB非常耗时），减少您的业务停机时间。如果您对业务停机时间要求非常敏感，且不关心DBCC CheckDB结果，建议使用异步执行DBCC。此时CreateMigrateTask 中的`CheckDBMode = SyncExecuteDBCheck`。
     -   同步执行DBCC：相对于异步执行DBCC，有的用户非常关心DBCC CheckDB的结果，以此来找出用户线下数据库数据一致性错误。此时，建议您选择同步执行DBCC，影响是会拉长打开数据库的时间。此时CreateMigrateTask 中的`CheckDBMode = AsyncExecuteDBCheck`。 |
-
-    ![数据导入向导](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2203729951/p96212.png)
 
 8.  单击**确定**。
 
